--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
   },
   "homepage": "https://github.com/AndrewHeinke/Week11-Hangman#readme",
   "dependencies": {
-    "inquirer": "^1.1.1"
+    "prompt": "^1.0.0"
   }
 }
